--- a/main.html
+++ b/main.html
@@ -28,6 +28,10 @@
       <small id="reloadWarning" style="display: none;">Reload the page to see changes</small>
       <small id="invalidFontWarning" style="display: none; color: red;">Invalid font</small>
       <script src="/scripts/popup.js"></script>
+      
+      <hr>
+      <button id="whitelist-button">Whitelist a new element to be "translated"</button>
+      <button id="blacklist-button">Blacklist an element</button>
     </div>
   </body>
 </html>
